--- a/asset/style.css
+++ b/asset/style.css
@@ -144,6 +144,11 @@ header .icons a:hover{
   animation:shoe .3s linear;
 }
 
+ .lontong{
+  width:100%;
+  transform: rotate(-5deg);
+  animation:shoe .3s linear;
+}
 @keyframes shoe{
   0%{
     transform: rotate(0deg) scale(.5);
@@ -155,6 +160,15 @@ header .icons a:hover{
   top:0; left:0;
   z-index: -1;
   animation:shoeText .5s linear .5s backwards;
+}
+
+.txtLontong{
+  position: absolute;
+  top:300px; left:420px;
+  z-index: 10000;
+  animation:shoeText .5s linear .5s backwards;
+  transform: rotate(-35deg);
+  
 }
 
 @keyframes shoeText{
@@ -181,19 +195,19 @@ header .icons a:hover{
 }
 
 .home .slide-container:nth-child(1) .slide{
-  background:url(../images/home-bg-1.jpg) no-repeat;
+  background:url(../images/home-bg1.jpg) no-repeat;
   background-size: cover;
   background-position: center;
 }
 
 .home .slide-container:nth-child(2) .slide{
-  background:url(../images/home-bg-2.jpg) no-repeat;
+  background:url(../images/home-bg.jpg) no-repeat;
   background-size: cover;
   background-position: center;
 }
 
 .home .slide-container:nth-child(3) .slide{
-  background:url(../images/home-bg-3.jpg) no-repeat;
+  background:url(../images/home-bg2.jpg) no-repeat;
   background-size: cover;
   background-position: center;
 }
